error/warning fix

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,32 +6,28 @@ block content
         h2 Door Stijn van Gaal en Diede Exterkate
         .urls
             .url#races
-                span.url_title
-                    /races
+                span.url_title /races
                 .possible_method#races
                     code GET
                     code PUT
                     code POST
                     code DELETE
             .url#locations
-                span.url_title
-                    /locations
+                span.url_title /locations
                 .possible_method#locations
                     code GET
                     code PUT
                     code POST
                     code DELETE
             .url#users
-                span.url_title
-                    /users
+                span.url_title /users
                 .possible_method#users
                     code GET
                     code PUT
                     code POST
                     code DELETE
             .url#waypoints
-                span.url_title
-                    /waypoints
+                span.url_title /waypoints
                 .possible_method#waypoints
                     code GET
                     code PUT
