--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,8 +8,8 @@ a {
 }
 
 .container{
-  border-radius: 15px;
-  background-color: rgba(0,100,255,0.1);
+  border-radius: 10px;
+  background-color: rgba(0,100,255,0.05);
   padding:20px;
   border:1px solid rgba(0,100,255,0.2);
 }
@@ -28,9 +28,10 @@ a {
 }
 
 code{
-  padding: 0;
   padding-top: 0.2em;
   padding-bottom: 0.2em;
+  padding-left: 0.5em;
+  padding-right: 0.5em;
   margin: 3px;
   font-size: 85%;
   background-color: rgba(0,0,0,0.04);
