separated api from frontend and started on waypoints frontend

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,18 @@ block content
     .container
         h1= title
         h2 Door Stijn van Gaal en Diede Exterkate
+        hr
+        .management
+        h3 Manage data
+            .url#manageraces
+                span.url_title
+                    a(href="/manageraces") Manage races
+            .url#managewaypoints
+                span.url_title
+                    a(href="/managewaypoints") Manage waypoints
+        hr
         .urls
+        h3 Api
             .url#races
                 span.url_title
                     a(href="/races") /races
