--- a/views/races.jade
+++ b/views/races.jade
@@ -2,6 +2,8 @@ extends layout
 
 block content
     .container
+        .back
+            a(href="../") back
         h1= title
         .new_race
             form(action='/races',method='PUT')
