--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,16 @@ block content
         h1= title
         h2 Door Stijn van Gaal en Diede Exterkate
         hr
+        .register
+            if message
+                .error= message
+            form(action='/signup', method='post')
+                label(for='username') Username
+                input(id='username',type='text',value='', name='username')
+                label(for='password') Password
+                input(id='password',type='password',value='', name='password')
+                input(type='submit', value="register")#register
+        hr
         .management
         h3 Manage data
         .url#manageraces
