--- a/views/waypoints.jade
+++ b/views/waypoints.jade
@@ -3,7 +3,7 @@ extends layout
 block content
     .container(data-id='#{raceId}')
         .back
-            a(href="../") back
+            a(href="/manageraces") back
         h1.title= title
         .location_search
             label(for='locsearch') Search for a location for your waypoint
