--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,11 @@ html
     head
         title= title
         link(rel='stylesheet', href='/stylesheets/style.css')
+        script(src='https://cdn.socket.io/socket.io-1.4.5.js')
         if styleseets
             each stylesheet in stylesheets
                 link(rel='stylesheet', href='/stylesheets/' + stylesheet + '.css')
+
         if scripts
             each script in scripts
                 script(src='/js/' + script + '.js')
