--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,6 @@ html
 
         if scripts
             each script in scripts
-                script(src='/js/' + script + '.js')
+                script(src='/public/js/' + script + '.js')
     body
         block content
